{
  "version": 4,
  "terraform_version": "1.1.1",
  "serial": 109,
  "lineage": "21866644-5652-e56d-3b50-771281d86d69",
  "resources": [
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/satya-project-344408/global/networks/joy-cluster-network-c8vf-network",
            "name": "joy-cluster-network-c8vf-network",
            "project": "satya-project-344408",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/satya-project-344408/global/networks/joy-cluster-network-c8vf-network"
          },
          "dependencies": [
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "vpc_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-04-10T22:20:23.355-07:00",
            "id": "projects/satya-project-344408/regions/us-central1/routers/joy-cluster-network-c8vf-router",
            "name": "joy-cluster-network-c8vf-router",
            "network": "https://www.googleapis.com/compute/v1/projects/satya-project-344408/global/networks/joy-cluster-network-c8vf-network",
            "project": "satya-project-344408",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/satya-project-344408/regions/us-central1/routers/joy-cluster-network-c8vf-router"
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "vpc_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "satya-project-344408/us-central1/joy-cluster-network-c8vf-router/joy-cluster-network-c8vf-nat",
            "min_ports_per_vm": 0,
            "name": "joy-cluster-network-c8vf-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "satya-project-344408",
            "region": "us-central1",
            "router": "joy-cluster-network-c8vf-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/satya-project-344408/regions/us-central1/subnetworks/joy-cluster-network-c8vf-subnetwork-public",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "random_string.suffix",
            "module.vpc_network.google_compute_network.vpc",
            "module.vpc_network.google_compute_router.vpc_router",
            "module.vpc_network.google_compute_subnetwork.vpc_subnetwork_public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-04-10T22:20:23.599-07:00",
            "gateway_address": "10.3.16.1",
            "id": "projects/satya-project-344408/regions/us-central1/subnetworks/joy-cluster-network-c8vf-subnetwork-private",
            "ip_cidr_range": "10.3.16.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "joy-cluster-network-c8vf-subnetwork-private",
            "network": "https://www.googleapis.com/compute/v1/projects/satya-project-344408/global/networks/joy-cluster-network-c8vf-network",
            "private_ip_google_access": true,
            "project": "satya-project-344408",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/satya-project-344408/regions/us-central1/subnetworks/joy-cluster-network-c8vf-subnetwork-private"
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-04-10T22:20:24.637-07:00",
            "gateway_address": "10.3.0.1",
            "id": "projects/satya-project-344408/regions/us-central1/subnetworks/joy-cluster-network-c8vf-subnetwork-public",
            "ip_cidr_range": "10.3.0.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "joy-cluster-network-c8vf-subnetwork-public",
            "network": "https://www.googleapis.com/compute/v1/projects/satya-project-344408/global/networks/joy-cluster-network-c8vf-network",
            "private_ip_google_access": true,
            "project": "satya-project-344408",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.0.0/20",
                "range_name": "public-cluster"
              },
              {
                "ip_cidr_range": "10.4.32.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/satya-project-344408/regions/us-central1/subnetworks/joy-cluster-network-c8vf-subnetwork-public"
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "private_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.3.16.1",
            "id": "projects/satya-project-344408/regions/us-central1/subnetworks/joy-cluster-network-c8vf-subnetwork-private",
            "ip_cidr_range": "10.3.16.0/20",
            "name": "joy-cluster-network-c8vf-subnetwork-private",
            "network": "https://www.googleapis.com/compute/v1/projects/satya-project-344408/global/networks/joy-cluster-network-c8vf-network",
            "private_ip_google_access": true,
            "project": "satya-project-344408",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/satya-project-344408/regions/us-central1/subnetworks/joy-cluster-network-c8vf-subnetwork-private"
          }
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "public_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.3.0.1",
            "id": "projects/satya-project-344408/regions/us-central1/subnetworks/joy-cluster-network-c8vf-subnetwork-public",
            "ip_cidr_range": "10.3.0.0/20",
            "name": "joy-cluster-network-c8vf-subnetwork-public",
            "network": "https://www.googleapis.com/compute/v1/projects/satya-project-344408/global/networks/joy-cluster-network-c8vf-network",
            "private_ip_google_access": true,
            "project": "satya-project-344408",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.0.0/20",
                "range_name": "public-cluster"
              },
              {
                "ip_cidr_range": "10.4.32.0/20",
                "range_name": "public-services"
              },
              {
                "ip_cidr_range": "10.232.160.0/20",
                "range_name": "gke-joy-cluster-services-9950eea8"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/satya-project-344408/regions/us-central1/subnetworks/joy-cluster-network-c8vf-subnetwork-public"
          }
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_all_network_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-04-10T22:21:10.407-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/satya-project-344408/global/firewalls/joy-cluster-network-c8vf-private-allow-ingress",
            "log_config": [],
            "name": "joy-cluster-network-c8vf-private-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/satya-project-344408/global/networks/joy-cluster-network-c8vf-network",
            "priority": 1000,
            "project": "satya-project-344408",
            "self_link": "https://www.googleapis.com/compute/v1/projects/satya-project-344408/global/firewalls/joy-cluster-network-c8vf-private-allow-ingress",
            "source_ranges": [
              "10.3.0.0/20",
              "10.3.16.0/20",
              "10.4.0.0/20",
              "10.4.16.0/20",
              "10.4.32.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "private"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "module.vpc_network.google_compute_subnetwork.vpc_subnetwork_private",
            "module.vpc_network.google_compute_subnetwork.vpc_subnetwork_public",
            "module.vpc_network.module.network_firewall.data.google_compute_subnetwork.private_subnetwork",
            "module.vpc_network.module.network_firewall.data.google_compute_subnetwork.public_subnetwork",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_restricted_network_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-04-10T22:20:23.716-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/satya-project-344408/global/firewalls/joy-cluster-network-c8vf-allow-restricted-inbound",
            "log_config": [],
            "name": "joy-cluster-network-c8vf-allow-restricted-inbound",
            "network": "https://www.googleapis.com/compute/v1/projects/satya-project-344408/global/networks/joy-cluster-network-c8vf-network",
            "priority": 1000,
            "project": "satya-project-344408",
            "self_link": "https://www.googleapis.com/compute/v1/projects/satya-project-344408/global/firewalls/joy-cluster-network-c8vf-allow-restricted-inbound",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "private",
              "private-persistence"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "private-persistence"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public_allow_all_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-04-10T22:20:22.999-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/satya-project-344408/global/firewalls/joy-cluster-network-c8vf-public-allow-ingress",
            "log_config": [],
            "name": "joy-cluster-network-c8vf-public-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/satya-project-344408/global/networks/joy-cluster-network-c8vf-network",
            "priority": 1000,
            "project": "satya-project-344408",
            "self_link": "https://www.googleapis.com/compute/v1/projects/satya-project-344408/global/firewalls/joy-cluster-network-c8vf-public-allow-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "public"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "random_string.suffix"
          ]
        }
      ]
    }
  ]
}